// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellBody should render correctly 1`] = `
<Fragment>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <td
    className="table__cell table__cell--no-padding"
  >
    Default button
  </td>
</Fragment>
`;

exports[`CellHead should render correctly 1`] = `
<Fragment>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <th
    className="table__cell table__cell--no-padding"
  >
    Default button
  </th>
</Fragment>
`;

exports[`Row should render correctly 1`] = `
<Fragment>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <tr
    className="table__row table__row--body"
  >
    Default button
  </tr>
</Fragment>
`;

exports[`Table should render correctly 1`] = `
<Fragment>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <table
    className="table"
  >
    Default button
  </table>
</Fragment>
`;

exports[`TableBody should render correctly 1`] = `
<Fragment>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <tbody
    className="table__body"
  >
    Default button
  </tbody>
</Fragment>
`;

exports[`TableHead should render correctly 1`] = `
<Fragment>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <thead
    className="table__head"
  >
    Default button
  </thead>
</Fragment>
`;
